--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "destr": "^2.0.0",
     "dirname-filename-esm": "^1.1.1",
     "discord.js": "^14.13.0",
+    "discord-oauth2": "^2.11.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "escape-html": "~1.0.3",
     "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
     "express-limit": "^1.0.0",
