Add Bombo Gyatt

--- a/CloudStorage/DefaultGame.ini
+++ b/CloudStorage/DefaultGame.ini
@@ -49,6 +49,8 @@ bIsAthenaGlobalChatEnabled=true
 +TextReplacements=(Category=Game, bIsMinimalPatch=True, Namespace="", Key="CA2EC1714F23111FDBE6439EBC961404", NativeString="EMAIL", LocalizedStrings=(("en","Email")))
 
 +TextReplacements=(Category=Game, bIsMinimalPatch=True, Namespace="", Key="40D1ADD648EDBD000A8F7E88E8D90341", NativeString="ITEM SHOP", LocalizedStrings=(("en","Item Shop")))
++TextReplacements=(Category=Game, bIsMinimalPatch=True, Namespace="", Key="B6910A7746BE199DDBE5B3AF0BB3240D", NativeString="Chun-Li", LocalizedStrings=(("en","Gyatt!!!!!")))
+
 
 [/Script/FortniteGame.FortGameInstance]
 !FrontEndPlaylistData=ClearArray
