Finally fix winterfest mabye or skunked idfk

--- a/CloudStorage/DefaultGame.ini
+++ b/CloudStorage/DefaultGame.ini
@@ -62,3 +62,7 @@ bIsAthenaGlobalChatEnabled=true
 ;bObtainJoinTokenFromPartyService=false
 ;MaxRetries=0
 ;VoiceChatImplementation=Vivox
+
+[AssetHotfix]
++CurveTable=/Game/Athena/Balance/DataTables/AthenaGameData;RowUpdate;Default.SafeZone.Damage;0;0
++CurveTable=/Game/Athena/Balance/DataTables/AthenaGameData;RowUpdate;Default.PistolFlintlock.KnockMagSelf;0;0
